yoshimi 1.7.4 M

2021-1-6 Will
* Unison Invert made dynamic.
* Oscil phase random now label resizes.
  missed these earlier :(
* Small AddSynth position adjustments.

2021-1-5 Will
* Merged in resize branch
* Corrected date below

2021-1-5 Will
Temporarily disabled ring mod sideband feature.
Skipped over missing build numbers.
Set release version 1.7.4

2020-12-27 Will
Added recommendation to set inst. type when saving.

2020-12-23 Will
BugFix: secondary instance banks not fiding local dir.

2020-11-15 Will
BugFix: GUI not setting kit item names.

2020-10-29 Will
*Updated docs.
* Set release as 1.7.3 (mantenance)

2020-10-27 Will
* BugFix: base func mod not enabled for triangle wave.

2020-10-25 Will
* BugFix: Failing to load some .scl files.
  Microsoft format text generating blank lines.

2020-10-24 Will
* Bugfix: Voice enable not recognised from voice list.

2020-10-8 Will
* BugFix: Addsynth Global detune type range wrong.

2020-9-20 Will
* BugFix: Indirect vector not being called.
  Copy and paste error :(

2020-9-20 Will
* Removed very old commented out WidgetPdial code.
  It was a bit hacky and was long since superceded.

2020-9-16 Will
* Split out engine processes from commandSendReal.
* Found and replaced 2 magic numbers.
  Don't understand how sustainPedalEnable can ever be
  relevant in addVoice! (InterChange.cpp line 1969);
* Split indirectMain out of indirectTransfers.
* Cleaned up indirectMain.
* Split indirectBank out of indirectTransfers.
* Split indirectConfig out of indirectTransfers.
* Split indirectPart out of indirectTransfers.
* Split indirectScales out of indirectTransfers.
* Spilt indirectVector & indirectMidi from indirectTransfers.

2020-9-11 Will
* Fixed some confusing CLI info typos.
* Corrected CLI anomaly with instrument default copyright.
  It was possible to set it outside the part context
  and sometimes this only worked for part 1.

2020-9-6 Will
* Major revision of virtual keyboard.
  Controller values match existing settings.