@@ -5,7 +5,7 @@
     Copyright (C) 2002-2005 Nasca Octavian Paul
     Copyright 2009-2011, Alan Calvert
     Copyright 2009, James Morris
-    Copyright 2014-2020, Will Godfrey & others
+    Copyright 2014-2021, Will Godfrey & others
 
     This file is part of yoshimi, which is free software: you can redistribute
     it and/or modify it under the terms of the GNU Library General Public
@@ -2533,7 +2533,9 @@ vector<string> * SynthEngine::getHistory(int group)
             return &KeymapHistory;
             break;
         default:
-            Runtime.Log("Unrecognised group " + to_string(group) + "\nUsing patchset history");
+            // can't identify what is calling this.
+            // It's connected with opening the filer
+            //Runtime.Log("Unrecognised group " + to_string(group) + "\nUsing patchset history");
             return &ParamsHistory;
     }
 }
